Refactor HTML structure and improve content clarity

--- a/index.html
+++ b/index.html
@@ -9,47 +9,73 @@
 </head>
 <body>
 
-<!-- LOGO SECTION -->
-<section class="logo-section">
-  <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo-full">
-</section>
+  <!-- LOGO SECTION -->
+  <section class="logo-section">
+    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo-full">
+  </section>
 
-<!-- NAVIGATION -->
-<nav class="navbar">
-  <ul>
-    <li><a href="index.html" class="active">Home</a></li>
-    <li><a href="books.html">Books</a></li>
-    <li><a href="tutoring.html">Tutoring</a></li>
-  </ul>
-</nav>
+  <!-- NAVIGATION -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="books.html">Books</a></li>
+      <li><a href="tutoring.html">Tutoring</a></li>
+    </ul>
+  </nav>
 
-  <!-- MAIN CONTENT -->
-  <section class="section light">
+  <!-- INTRODUCTION SECTION -->
+  <section class="intro">
     <h1>Welcome to: Lithako Edu & Sports</h1>
     <p class="slogan">Empowering our young minds through education & sports.</p>
 
     <p>
-      Our structured training programs are tailored for learners aged 5 to 15, combining academic support 
-      with high-performance sports development across Football, Basketball, Netball, Athletics, and more.
-      With qualified coaches, safe facilities, and results-driven programs, we empower every child to reach 
-      their full potential — academically, physically, and mentally.
+      Our structured training programs are tailored for learners aged 5 to 15,
+      combining academic support with high-performance sports development
+      across Football, Basketball, Netball, Athletics, and more.
     </p>
     <p>
-      We’re here to nurture their confidence, teach teamwork, and show them that dedication pays off both 
-      in the classroom and on the field.
+      With qualified coaches, safe facilities, and results-driven programs,
+      we empower every child to reach their full potential—academically,
+      physically, and mentally.
     </p>
     <p>
-      Through our balanced approach to education and sport, children learn discipline, respect, and resilience, 
-      which are values that will carry them far beyond the now.
+      We’re here to nurture their confidence, teach teamwork, and show them that
+      dedication pays off both in the classroom and on the field.
+    </p>
+    <p>
+      Through our balanced approach to education and sport, children learn discipline,
+      respect, and resilience, which are values that will carry them far beyond the now.
     </p>
     <p><strong>Developing Complete athletes, because every child deserves a chance.</strong></p>
 
-    <div class="button-group">
+    <div class="buttons">
       <button onclick="window.location.href='books.html'">📘 Explore Our Books</button>
       <button onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
     </div>
   </section>
 
+  <!-- CONTACT SECTION -->
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p><strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
+    <p><strong>Phone:</strong> +27 67 265 6319</p>
+    <p><strong>Location:</strong> City of Matlosana</p>
+  </section>
+
   <!-- ABOUT SECTION -->
-  <section class="section about light">
-    <h2>Abou
+  <section class="about">
+    <h2>About Ranneile Lesupi</h2>
+    <p>
+      Ranneile Lesupi – Sports Coach & Business Visionary. A storyteller at heart.
+      Through Lithako Edu & Sports, he mentors and develops young learners and
+      athletes aged 5–15, guiding them to become confident scholars and disciplined champions.
+    </p>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    &copy; 2025 Lithako Edu & Sports. All rights reserved.
+  </footer>
+
+</body>
+</html>
