Refactor navigation to use div instead of ul

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
   <!-- NAVIGATION -->
   <nav class="navbar">
-    <ul>
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="books.html">Books</a></li>
-      <li><a href="tutoring.html">Tutoring</a></li>
-    </ul>
+    <div class="nav-container">
+      <a href="index.html" class="nav-link active">Home</a>
+      <a href="books.html" class="nav-link">Books</a>
+      <a href="tutoring.html" class="nav-link">Tutoring</a>
+    </div>
   </nav>
 
   <!-- INTRODUCTION SECTION -->
