Rearrange contact section position in index.html
Moved the contact section below the about section in the HTML structure.

--- a/index.html
+++ b/index.html
@@ -54,14 +54,6 @@
     </div>
   </section>
 
-  <!-- CONTACT SECTION -->
-  <section class="contact">
-    <h2>Contact Us</h2>
-    <p><strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
-    <p><strong>Phone:</strong> +27 67 265 6319</p>
-    <p><strong>Location:</strong> City of Matlosana</p>
-  </section>
-
   <!-- ABOUT SECTION -->
   <section class="about">
     <h2>About Ranneile Lesupi</h2>
@@ -70,6 +62,14 @@
       Through Lithako Edu & Sports, he mentors and develops young learners and
       athletes aged 5–15, guiding them to become confident scholars and disciplined champions.
     </p>
+  </section>
+
+  <!-- CONTACT SECTION (moved below About) -->
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p><strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
+    <p><strong>Phone:</strong> +27 67 265 6319</p>
+    <p><strong>Location:</strong> City of Matlosana</p>
   </section>
 
   <!-- FOOTER -->
