Add emojis to navigation and contact sections

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <!-- NAVIGATION -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="index.html" class="nav-link active">Home</a>
-      <a href="books.html" class="nav-link">Books</a>
-      <a href="tutoring.html" class="nav-link">Tutoring</a>
+      <a href="index.html" class="nav-link active">🏠 Home</a>
+      <a href="books.html" class="nav-link">📘 Books</a>
+      <a href="tutoring.html" class="nav-link">🎓 Tutoring</a>
     </div>
   </nav>
 
@@ -49,14 +49,14 @@
     <p><strong>Developing Complete athletes, because every child deserves a chance.</strong></p>
 
     <div class="buttons">
-      <button onclick="window.location.href='books.html'">📘 Explore Our Books</button>
-      <button onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
+      <button onclick="window.location.href='books.html'">📖 Explore Our Books</button>
+      <button onclick="window.location.href='tutoring.html'">🏅 Join Our Tutoring</button>
     </div>
   </section>
 
   <!-- ABOUT SECTION -->
   <section class="about">
-    <h2>About Ranneile Lesupi</h2>
+    <h2>👤 About Ranneile Lesupi</h2>
     <p>
       Ranneile Lesupi – Sports Coach & Business Visionary. A storyteller at heart.
       Through Lithako Edu & Sports, he mentors and develops young learners and
@@ -64,12 +64,12 @@
     </p>
   </section>
 
-  <!-- CONTACT SECTION (moved below About) -->
+  <!-- CONTACT SECTION -->
   <section class="contact">
-    <h2>Contact Us</h2>
-    <p><strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
-    <p><strong>Phone:</strong> +27 67 265 6319</p>
-    <p><strong>Location:</strong> City of Matlosana</p>
+    <h2>📞 Contact Us</h2>
+    <p><strong>📧 Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
+    <p><strong>📱 Phone:</strong> +27 67 265 6319</p>
+    <p><strong>📍 Location:</strong> City of Matlosana</p>
   </section>
 
   <!-- FOOTER -->
