Refactor index.html for improved structure and styling

--- a/index.html
+++ b/index.html
@@ -3,78 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Lithako Edu & Sports</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <title>Lithako Edu & Sports</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <!-- LOGO SECTION -->
-  <section class="logo-section">
-    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo-full">
-  </section>
+  <!-- HEADER -->
+  <header>
+    <div class="logo-container">
+      <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo">
+    </div>
+  </header>
 
   <!-- NAVIGATION -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <a href="index.html" class="nav-link active">🏠 Home</a>
-      <a href="books.html" class="nav-link">📘 Books</a>
-      <a href="tutoring.html" class="nav-link">🎓 Tutoring</a>
-    </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="books.html">Books</a>
+    <a href="tutoring.html">Tutoring</a>
   </nav>
 
-  <!-- INTRODUCTION SECTION -->
-  <section class="intro">
-    <h1>Welcome to: Lithako Edu & Sports</h1>
-    <p class="slogan">Empowering our young minds through education & sports.</p>
-
-    <p>
-      Our structured training programs are tailored for learners aged 5 to 15,
-      combining academic support with high-performance sports development
-      across Football, Basketball, Netball, Athletics, and more.
-    </p>
-    <p>
-      With qualified coaches, safe facilities, and results-driven programs,
-      we empower every child to reach their full potential—academically,
-      physically, and mentally.
-    </p>
-    <p>
-      We’re here to nurture their confidence, teach teamwork, and show them that
-      dedication pays off both in the classroom and on the field.
-    </p>
-    <p>
-      Through our balanced approach to education and sport, children learn discipline,
-      respect, and resilience, which are values that will carry them far beyond the now.
-    </p>
-    <p><strong>Developing Complete athletes, because every child deserves a chance.</strong></p>
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <h1>Welcome to: <strong>Lithako Edu & Sports</strong></h1>
+    <h2>Empowering our young minds through education & sports.</h2>
+    <p>Our structured training programs are tailored for learners aged 5 to 15, combining academic support with high-performance sports development across Football, Basketball, Netball, Athletics, and more.</p>
+    <p>With qualified coaches, safe facilities, and results-driven programs, we empower every child to reach their full potential, academically, physically, and mentally.</p>
+    <p>We’re here to nurture their confidence, teach teamwork, and show them that dedication pays off both in the classroom and on the field.</p>
+    <p>Through our balanced approach to education and sport, children learn discipline, respect, and resilience — values that will carry them far beyond the now.</p>
+    <p><strong>Developing Complete Athletes</strong>, because every child deserves a chance.</p>
 
     <div class="buttons">
-      <button onclick="window.location.href='books.html'">📖 Explore Our Books</button>
-      <button onclick="window.location.href='tutoring.html'">🏅 Join Our Tutoring</button>
+      <button onclick="window.location.href='books.html'">📘 Explore Our Books</button>
+      <button onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
     </div>
   </section>
 
   <!-- ABOUT SECTION -->
   <section class="about">
     <h2>👤 About Ranneile Lesupi</h2>
-    <p>
-      Ranneile Lesupi – Sports Coach & Business Visionary. A storyteller at heart.
-      Through Lithako Edu & Sports, he mentors and develops young learners and
-      athletes aged 5–15, guiding them to become confident scholars and disciplined champions.
-    </p>
+    <p><strong>Ranneile Lesupi</strong> — Sports Coach & Business Visionary. A storyteller at heart. Through <strong>Lithako Edu & Sports</strong>, he mentors and develops young learners and athletes aged 5–15, guiding them to become confident scholars and disciplined champions.</p>
   </section>
 
   <!-- CONTACT SECTION -->
   <section class="contact">
     <h2>📞 Contact Us</h2>
-    <p><strong>📧 Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
-    <p><strong>📱 Phone:</strong> +27 67 265 6319</p>
-    <p><strong>📍 Location:</strong> City of Matlosana</p>
+    <p><strong>Email:</strong> ✉️ <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
+    <p><strong>Phone:</strong> 📞 +27 67 265 6319</p>
+    <p><strong>Location:</strong> 📍 City of Matlosana</p>
   </section>
 
   <!-- FOOTER -->
   <footer>
-    &copy; 2025 Lithako Edu & Sports. All rights reserved.
+    &copy; 2025 <strong>Lithako Edu & Sports</strong>. All rights reserved.
   </footer>
 
 </body>
