--- a/books.html
+++ b/books.html
@@ -11,8 +11,7 @@
 <body>
 
   <!-- HEADER -->
-  <header>
-    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" />
+  <header class="page-header">
     <h1><strong>Lithako Edu & Sports</strong></h1>
     <p>Order <em>The Loony Hypochondriacs</em> Today</p>
   </header>
