Refactor index.html for improved structure and styling

--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lithako Edu & Sports</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <!-- HEADER -->
+  <!-- LOGO -->
   <header>
-    <div class="logo-container">
-      <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo">
-    </div>
+    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" style="width: 100%; max-width: 600px; border: 8px solid #aee0ff; border-radius: 12px;">
   </header>
 
   <!-- NAVIGATION -->
@@ -23,39 +21,43 @@
     <a href="tutoring.html">Tutoring</a>
   </nav>
 
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <h1>Welcome to: <strong>Lithako Edu & Sports</strong></h1>
-    <h2>Empowering our young minds through education & sports.</h2>
-    <p>Our structured training programs are tailored for learners aged 5 to 15, combining academic support with high-performance sports development across Football, Basketball, Netball, Athletics, and more.</p>
-    <p>With qualified coaches, safe facilities, and results-driven programs, we empower every child to reach their full potential, academically, physically, and mentally.</p>
-    <p>We’re here to nurture their confidence, teach teamwork, and show them that dedication pays off both in the classroom and on the field.</p>
-    <p>Through our balanced approach to education and sport, children learn discipline, respect, and resilience — values that will carry them far beyond the now.</p>
-    <p><strong>Developing Complete Athletes</strong>, because every child deserves a chance.</p>
+  <!-- MAIN INTRO -->
+  <section class="section">
+    <div class="box">
+      <h2>Welcome to: <strong>Lithako Edu & Sports</strong></h2>
+      <p><em>Empowering our young minds through education & sports.</em></p>
+      <p>Our structured training programs are tailored for learners aged 5 to 15, combining academic support with high-performance sports development across Football, Basketball, Netball, Athletics, and more.</p>
+      <p>With qualified coaches, safe facilities, and results-driven programs, we empower every child to reach their full potential — academically, physically, and mentally.</p>
+      <p>We’re here to nurture their confidence, teach teamwork, and show them that dedication pays off both in the classroom and on the field.</p>
+      <p>Through our balanced approach to education and sport, children learn discipline, respect, and resilience — values that will carry them far beyond the now.</p>
+      <p><strong>Developing Complete Athletes, because every child deserves a chance.</strong></p>
 
-    <div class="buttons">
-      <button onclick="window.location.href='books.html'">📘 Explore Our Books</button>
-      <button onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
+      <div style="text-align:center;">
+        <button class="cta-button" onclick="window.location.href='books.html'">📚 Explore Our Books</button>
+        <button class="cta-button" onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
+      </div>
     </div>
   </section>
 
-  <!-- ABOUT SECTION -->
-  <section class="about">
-    <h2>👤 About Ranneile Lesupi</h2>
-    <p><strong>Ranneile Lesupi</strong> — Sports Coach & Business Visionary. A storyteller at heart. Through <strong>Lithako Edu & Sports</strong>, he mentors and develops young learners and athletes aged 5–15, guiding them to become confident scholars and disciplined champions.</p>
+  <!-- ABOUT -->
+  <section class="section">
+    <div class="bio-box">
+      <h2>About Ranneile Lesupi</h2>
+      <p><strong>Ranneile Lesupi</strong> – Sports Coach & Business Visionary. A storyteller at heart.</p>
+      <p>Through <strong>Lithako Edu & Sports</strong>, he mentors and develops young learners and athletes aged 5–15, guiding them to become confident scholars and disciplined champions.</p>
+    </div>
   </section>
 
-  <!-- CONTACT SECTION -->
-  <section class="contact">
-    <h2>📞 Contact Us</h2>
-    <p><strong>Email:</strong> ✉️ <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
-    <p><strong>Phone:</strong> 📞 +27 67 265 6319</p>
-    <p><strong>Location:</strong> 📍 City of Matlosana</p>
+  <!-- CONTACT -->
+  <section class="section contact-box">
+    <h2>Contact Us</h2>
+    <p>📧 <strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a><br>
+       📞 <strong>Phone:</strong> +27 67 265 6319<br>
+       📍 <strong>Location:</strong> City of Matlosana</p>
   </section>
 
-  <!-- FOOTER -->
   <footer>
-    &copy; 2025 <strong>Lithako Edu & Sports</strong>. All rights reserved.
+    &copy; 2025 Lithako Edu & Sports. All rights reserved.
   </footer>
 
 </body>
