Refactor welcome section and add buttons

--- a/index.html
+++ b/index.html
@@ -22,22 +22,25 @@
   </nav>
 
   <!-- MAIN INTRO -->
+  <section class="section" style="text-align:center;">
+    <h2>Welcome to: <strong>Lithako Edu & Sports</strong></h2>
+    <p><em>Empowering our young minds through education & sports.</em></p>
+  </section>
+
   <section class="section">
     <div class="box">
-      <h2>Welcome to: <strong>Lithako Edu & Sports</strong></h2>
-      <p><em>Empowering our young minds through education & sports.</em></p>
       <p>Our structured training programs are tailored for learners aged 5 to 15, combining academic support with high-performance sports development across Football, Basketball, Netball, Athletics, and more.</p>
       <p>With qualified coaches, safe facilities, and results-driven programs, we empower every child to reach their full potential — academically, physically, and mentally.</p>
       <p>We’re here to nurture their confidence, teach teamwork, and show them that dedication pays off both in the classroom and on the field.</p>
       <p>Through our balanced approach to education and sport, children learn discipline, respect, and resilience — values that will carry them far beyond the now.</p>
       <p><strong>Developing Complete Athletes, because every child deserves a chance.</strong></p>
-
-      <div style="text-align:center;">
-        <button class="cta-button" onclick="window.location.href='books.html'">📚 Explore Our Books</button>
-        <button class="cta-button" onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
-      </div>
     </div>
   </section>
+
+  <div style="text-align:center;">
+    <button class="cta-button" onclick="window.location.href='books.html'">📚 Explore Our Books</button>
+    <button class="cta-button" onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
+  </div>
 
   <!-- ABOUT -->
   <section class="section">
