Update Shipping FAQs and contact section styling

--- a/books.html
+++ b/books.html
@@ -73,7 +73,7 @@
 
   <section class="section">
     <details class="faq" open>
-      <summary style="color: black;">⬇️ Shipping FAQs</summary>
+      <summary style="color: black;">🚚 Shipping FAQs</summary>
       <p><strong>Is delivery included in the price?</strong><br>
       No, delivery is charged separately. You can choose between Pep Paxi, Pudo, or PostNet.</p>
 
@@ -85,18 +85,11 @@
     </details>
   </section>
 
-  <section class="section">
-    <div class="box">
-      <h2>Thank You!</h2>
-      <p>Thank you for your interest in <em>The Loony Hypochondriacs</em>. Your support helps bring bold, fresh stories to life. We can't wait to deliver your copy soon!</p>
-    </div>
-  </section>
-
-  <section class="section contact-box">
+  <section class="section contact-box" style="text-align:center; max-width:900px; margin:auto;">
     <h2>Contact Us</h2>
-    <p><strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a><br>
-       <strong>Phone:</strong> +27 67 265 6319<br>
-       <strong>Location:</strong> City of Matlosana</p>
+    <p>📧 <strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a><br>
+       📞 <strong>Phone:</strong> +27 67 265 6319<br>
+       📍 <strong>Location:</strong> City of Matlosana</p>
   </section>
 
   <div class="back-home">
