Refactor header and call to action sections

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-  <!-- LOGO -->
-  <header>
-    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" style="width: 100%; max-width: 600px; border: 8px solid #aee0ff; border-radius: 12px;">
+  <!-- LOGO SECTION -->
+  <header class="full-logo-header">
+    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="full-logo">
   </header>
 
   <!-- NAVIGATION -->
@@ -37,7 +37,8 @@
     </div>
   </section>
 
-  <div style="text-align:center;">
+  <!-- CALL TO ACTION BUTTONS -->
+  <div class="center-buttons" style="display:flex; flex-direction:column; align-items:center; gap:1rem;">
     <button class="cta-button" onclick="window.location.href='books.html'">📚 Explore Our Books</button>
     <button class="cta-button" onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
   </div>
@@ -47,12 +48,11 @@
     <div class="bio-box">
       <h2>About Ranneile Lesupi</h2>
       <p><strong>Ranneile Lesupi</strong> – Sports Coach & Business Visionary. A storyteller at heart.</p>
-      <p>Through <strong>Lithako Edu & Sports</strong>, he mentors and develops young learners and athletes aged 5–15, guiding them to become confident scholars and disciplined champions.</p>
     </div>
   </section>
 
   <!-- CONTACT -->
-  <section class="section contact-box">
+  <section class="section contact-box" style="text-align:center; max-width:900px; margin:auto;">
     <h2>Contact Us</h2>
     <p>📧 <strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a><br>
        📞 <strong>Phone:</strong> +27 67 265 6319<br>
